[package]
name = "r1gcat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.13", features = ["full"]}
termcolor = "1.2"
nom = "7.1.3"
bytes = "1.4.0"
serde = {version = "1.0", features = ["derive"]}
chrono = "0.4.27"
anyhow = "1.0.72"
process-stream = "0.4.1"
term_size = "0.3.2"
which = "4.0.2"